crates/hexeract-macros/tests/ui/fail_missing_kind.stderr
error: #[handler] requires a kind argument: #[handler(command)], #[handler(query)] or #[handler(notification)]
  --> tests/ui/fail_missing_kind.rs:11:1
   |
11 | #[handler]
   | ^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `handler` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused imports: `HandlerContext` and `HexeractError`
 --> tests/ui/fail_missing_kind.rs:1:30
  |
1 | use hexeract_core::{Command, HandlerContext, HexeractError};
  |                              ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
